fixing warnings in test methods